[package]
name = "filesync-ui"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true, features = ["use_active_element"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
tauri-wasm-bindgen = { workspace = true }
thaw = { workspace = true, features = ["csr"] }
# wasm-bindgen-rayon = { workspace = true, features = [], version = "^1.2" }
rayon = { workspace = true }

[dependencies.desktop_ui]
path = "./desktop"
version = "*"

[dependencies.mobile_ui]
path = "./mobile"
version = "*"

[dependncies.http_server]
path = "./server"
version = "*"

[workspace]
members = [
    "database",
    "desktop",
    "icons",
    "js_bindgen",
    "mobile",
    "shared",
    "tauri",
    "tauri-wasm",
]

[workspace.dependencies]
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos = { version = "0.7.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos-remix-icon = "1.0.3"
leptos_router = { version = "0.7.0" }
leptos-use = "0.13.11"
leptos_toaster = "0.1.7"
leptos_reactive = "0.6.15"
tauri-wasm-bindgen = { path = "./tauri-wasm", version = "*" }
web-sys = "0.3.77"
rayon = "1.10.0"
# wasm-bindgen-rayon = "^1.2"
