[package]
name = "filesync-ui"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true, features = ["use_active_element"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
tauri-wasm-bindgen = { workspace = true }
thaw = { workspace = true, features = ["csr"] }

[dependencies.desktop_ui]
path = "./desktop"
version = "*"

[dependencies.mobile_ui]
path = "./mobile"
version = "*"

[workspace]
members = [
    "common/icons",
    "common/js_bindgen",
    "common/tauri-wasm", "common/tauri_bindgen",
    "desktop",
    "mobile",
    "src-tauri",
]

[workspace.dependencies]
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos = { version = "0.7.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.7.0" }
leptos-use = "0.13.11"
leptos_toaster = "0.1.7"
leptos_reactive = "0.6.15"
web-sys = "0.3.77"
rayon = "1.10.0"
leptos-qr = { git = "https://github.com/opeolluwa/leptos-qr", version = "0.2.0" }

[workspace.dependencies.tauri-wasm-bindgen]
path = "common/tauri-wasm"
