[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = ""
edition = "2021"
license = "MIT"
name = "send-file-core"
repository = ""
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
tokio-util = { version = "0.7", features = ["io"] }
axum = {version = "0.6.12", features = ["multipart"] }
dirs = "5.0.0"
filesize = "0.2.0"
portpicker = "0.1.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
tauri-plugin-store = {git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev"}
tauri-plugin-upload = {git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev"}
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = {version = "1.26.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"] }
reqwest = "0.11.16"
lazy_static = "1.4.0"
walkdir = "2.3.3"
sys-info = "0.9.1"
uptime_lib = "0.2.2"
pnet_datalink = "0.33.0"
futures = "0.3.28"
wildmatch = "2.1.1"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
