[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "securely share files over a wifi without internet"
edition = "2021"
license = "MIT"
name = "filesync"
repository = "https://github.com/opeolluwa/filesync"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.3", features = [] }

[dependencies]
assert_fs = "1.0.13"
axum = {version = "0.6.12", features = ["multipart", "headers"] }
battery = "0.7.8"
chrono = "0.4.31"
dirs = "5.0.0"
filesize = "0.2.0"
futures = "0.3.28"
hyper = {version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
local-ip-address = "0.5.3"
mime_guess = "2.0.4"
mockall = "0.11.4"
nanoid = "0.4.0"
network-interface = "1.0.1"
num-traits = "0.2.15"
pnet_datalink = "0.33.0"
portpicker = "0.1.1"
regex = "1.9.1"
reqwest = "0.11.16"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
sys-info = "0.9.1"
sysinfo = "0.29.2"
tauri = {version = "1.2", features = ["app-all", "dialog-all", "fs-all", "path-all", "shell-open"] }
tokio = {version = "1.26.0", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"] }
tower = {version = "0.4", features = ["util"] }
tower-http = {version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"] }
uptime_lib = "0.2.2"
walkdir = "2.3.3"
wildmatch = "2.1.1"
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
ts-rs = "7.0.0"
pnet = "0.34.0"
open = "5.1.2"
path-absolutize = "3.1.1"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
