[package]
name = "filesync-ui"
version = "0.5.0"
edition = "2021"

[workspace]
members = ["src-tauri", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-qr = { workspace = true }
leptos-use = { workspace = true }
leptos_router = { workspace = true }
leptos_toaster = { workspace = true, features = ["csr"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
thaw = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[workspace.dependencies]
thaw = { version = "0.4.0-beta-5", features = ["csr"] }
leptos = { version = "0.7.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.7.0" }
leptos-use = "0.13.11"
leptos_toaster = "0.1.7"
web-sys = "0.3.77"
rayon = "1.10.0"
leptos-qr = { git = "https://github.com/opeolluwa/leptos-qr", version = "0.2.0" }
embedded_server = { path = "server" }
thiserror = "2.0.12"
