[package]
name = "filesync-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-remix-icon = { workspace = true }
leptos-use = { workspace = true }
leptos_toaster = { workspace = true, features = ["csr"] }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
thaw = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.desktop_ui]
path = "./desktop"
version = "*"

[dependencies.mobile_ui]
path = "./mobile"
version = "*"

[dependncies.http_server]
path = "./server"
version = "*"

[workspace]
members = ["desktop", "mobile", "tauri"]

[workspace.dependencies]
thaw = { version = "0.3.4", features = ["csr"] }
leptos = { version = "0.6", features = ["csr"] }
concurrently = "0.3.3"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leptos-remix-icon = "1.0.3"
os_info = { version = "3.9.0", default-features = false }
leptos_router = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.11"
leptos_toaster = "0.1.7"

[dev-dependencies]
concurrently = { workspace = true }
