[package]
name = "mobile_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { workspace = true }
filesync_icons = { path = "../common/icons", version = "*" }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_reactive = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
tauri-wasm-bindgen = { path = "../common/tauri-wasm", version = "*" }
thaw = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2",features = ["all"] } 