[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["multipart"] }
dirs = "5.0.0"
glob = "0.3.1"
local-ip-address = "0.5.1"
portpicker = "0.1.1"
tokio = { version = "1.27.0", features = ["full"] }
walkdir = "2.3.3"
tower-http = { version = "0.4.0", features = ["limit", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.17.1"
serde_json = "1.0.95"
futures-util = "0.3.28"
axum_typed_multipart = "0.3.2"
reqwest = "0.11.16"
