[package]
name = "filesync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
anyhow = "1.0.96"
iroh = "0.33.0"
iroh-base = "0.33.0"
rand = { version = "0.9.0", features = ["small_rng"] }
random_str = "0.1.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-os = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri_bindgen = { version = "0.1.0", path = "../common/tauri_bindgen" }
tokio = "1.43.0"
thiserror = "2.0.12"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
uuid = { version = "1.15.1", features = ["v4"] }
dirs = "6.0.0"
tauri-plugin-fs = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

