[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "securely share files over a wifi without internet"
edition = "2021"
license = "MIT"
name = "filesync"
repository = "https://github.com/opeolluwa/filesync"
version = "0.6.0"

resolver = "1"
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }


[dependencies]
chrono = "0.4.31"
dirs = "5.0.0"
filesize = "0.2.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
local-ip-address = "0.5.3"
mockall = "0.11.4"
num-traits = "0.2.15"
pnet_datalink = "0.33.0"
portpicker = "0.1.1"
regex = "1.9.1"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.37"
uptime_lib = "0.2.2"
walkdir = "2.3.3"
path-absolutize = "3.1.1"
fs_extra = "1.3.0"
sha2 = "0.10.8"
rand = "0.8.5"
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio-tungstenite = "0.18.0"
memory-serve = "0.4.5"
http = "1.1.0"
infer = "0.15.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"
tauri = { version = "2.0.0-beta", features = [] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
ts-rs = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-os = "2.0.0-beta.8"
server = { path = "./server" }
filesystem = { path = "./filesystem" }


[target.'cfg(not(target_os = "android"))'.dependencies]
livewire = "0.1.0"
reqwest = "0.11.16"
