[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "securely share files over a wifi without internet"
edition = "2021"
license = "MIT"
name = "filesync"
repository = "https://github.com/opeolluwa/filesync"
version = "0.6.0"

resolver = "1"
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[workspace]
members = [".", "device", "filesystem"]

[workspace.dependencies]
ts-rs = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
chrono = "0.4.31"
device = { path = "device" }
dirs = "5.0.0"
filesize = "0.2.0"
filesystem = { path = "filesystem" }
fs_extra = "1.3.0"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
http = "1.1.0"
hyper = { version = "0.14.27", features = ["full"] }
infer = "0.15.0"
lazy_static = "1.4.0"
local-ip-address = "0.5.3"
memory-serve = "0.4.5"
mockall = "0.11.4"
num-traits = "0.2.15"
path-absolutize = "3.1.1"
pnet_datalink = "0.33.0"
portpicker = "0.1.1"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { path = "./server" }
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-os = "2.0.0-beta.8"
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-shell = "2.0.0-beta.9"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.37"
ts-rs = "7.0.0"
uptime_lib = "0.2.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.3.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
livewire = "0.1.0"
reqwest = "0.11.16"

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-barcode-scanner = "2.0.0-rc.4"
