[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "securely share files over a wifi without internet"
edition = "2021"
license = "MIT"
name = "filesync"
repository = "https://github.com/opeolluwa/filesync"
version = "0.6.0"

[lib]
name = "filesync_lib"
path = "src/lib.rs"

crate-type = ["staticlib", "cdylib",  "lib"]
# [workspace]
# resolver = "2"


[[bin]]
name = "app_lib_bin"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
assert_fs = "1.0.13"
battery = "0.7.8"
chrono = "0.4.31"
dirs = "5.0.0"
filesize = "0.2.0"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
local-ip-address = "0.5.3"
mime_guess = "2.0.4"
mockall = "0.11.4"
nanoid = "0.4.0"
network-interface = "1.0.1"
num-traits = "0.2.15"
pnet_datalink = "0.33.0"
portpicker = "0.1.1"
regex = "1.9.1"
reqwest = "0.11.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
sys-info = "0.9.1"
sysinfo = "0.29.2"
tauri = { version = "2.0.0-beta", features = [
] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uptime_lib = "0.2.2"
walkdir = "2.3.3"
wildmatch = "2.1.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
ts-rs = "7.0.0"
pnet = "0.34.0"
open = "5.1.2"
path-absolutize = "3.1.1"
fs_extra = "1.3.0"
wifidirect-legacy-ap = "0.4.0"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
tokio-stream = "0.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
include_dir = "0.7.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio-tungstenite = "0.18.0"
memory-serve = "0.4.5"
axum = { version = "0.7.5", features = ["ws", "multipart"] }
http = "1.1.0"
infer = "0.15.0"
livewire = "0.1.0"
axum-typed-websockets = "0.6.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
