[package]
name = "embedded_server"
description = "embedded http server for filesync app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
axum-extra = "0.9.3"
axum-server = { version = "0.6", features = ["tls-rustls"] }
axum-typed-websockets = "0.6.0"
dirs = "5.0.0"
filesize = "0.2.0"
fs_extra = "1.3.0"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4"
http = "1.1.0"
include_dir = "0.7.3"
infer = "0.15.0"
lazy_static = "1.4.0"
local-ip-address = "0.6.3"
memory-serve = "0.4.5"
mime_guess = "2.0.4"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror.workspace = true
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18.0"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
