[package]
name = "filesync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "filesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
anyhow = "1.0.96"
dirs = "6.0.0"
iroh = "0.33.0"
iroh-base = "0.33.0"
rand = { version = "0.9.0", features = ["small_rng"] }
random_str = "0.1.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2.0.12"
tokio = "1.43.0"
uuid = { version = "1.15.1", features = ["v4"] }
embedded_server = { workspace = true }
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
