[package]
name = "filesync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "filesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
dirs = "6.0.0"
embedded_server = { workspace = true, features = ["config", "server"] }
local-ip-address = "0.6.4"
rand = { version = "0.9.0", features = ["small_rng"] }
random_str = "0.1.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shared = { workspace = true, features = ["config", "state"] }
tauri = { workspace = true, features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2.0.12"
tokio = "1.43.0"
uuid = { version = "1.15.1", features = ["v4"] }
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"


# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# shared = { workspace = true }
