[package]
name = "device"
description = "return the device type, os, and capabilities"
version = "0.1.0"
edition = "2021"

[dependencies]
os_info = "3.8.2"
serde = { version = "1.0.210", features = ["derive"] }
sysinfo = "0.31.4"
filesystem = {path = "../filesystem"}
json-value = "0.3.3"
serde_json = "1.0.128"
