[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.0"
filesize = "0.2.0"
futures = "0.3.28"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
regex = "1.9.1"
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
fs_extra = "1.3.0"
sha2 = "0.10.8"
rand = "0.8.5"
tokio-stream = "0.1"
include_dir = "0.7.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4"
tokio-tungstenite = "0.18.0"
memory-serve = "0.4.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
axum = { version = "0.7.5", features = ["ws", "multipart"] }
http = "1.1.0"
infer = "0.15.0"
axum-typed-websockets = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
axum-extra = "0.9.3"
